--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,63 +1,53 @@
-// Цветовая схема
-$background-color: #f6f6f6;
-$primary-color: #242729;
-$secondary-color: #2e2f33;
-$accent-color: #f48024;
-$link-color: #0077cc;
-
-// Шрифты
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-body {
-  background-color: $background-color;
-  font-family: $font-family;
-  font-size: 14px;
-  line-height: 1.6;
-  color: $primary-color;
+// Общие стили
+html, body {
   margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  height: 100%;
 }
 
-header {
-  background-color: $secondary-color;
-  padding: 10px 0;
-  
-  nav {
-    // Здесь добавьте стили для вашей навигационной панели
-  }
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-
-  h1, h2 {
-    margin-top: 0;
-    font-weight: 700;
-  }
-
-  h1 {
-    font-size: 36px;
-    color: $accent-color;
-  }
-
-  h2 {
-    font-size: 28px;
-  }
+  flex: 1;
 }
 
-a {
-  color: $link-color;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
+// Навигационная панель
+header {
+  background-color: #f48024;
+  padding: 5px 0;
 }
 
-footer {
-  background-color: $secondary-color;
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+// Основной контент
+section {
+  text-align: center;
   padding: 20px 0;
-  
-  // Здесь добавьте стили для вашего футера
+}
+
+h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 40px;
+}
+
+// Футер
+footer {
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
 }
