--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,10 +23,62 @@ header {
   height: 60px;
 }
 
+.logo {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.logo a {
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+}
+
 nav {
+  display: inline-block;
+  margin-left: 30px;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
+}
+
+nav ul li {
+  margin-right: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+.download-resume {
+  display: inline-block;
+  float: right;
+  margin-right: 20px;
+}
+
+.download-resume a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  border: 1px solid #fff;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+
+.download-resume a:hover {
+  background-color: #fff;
+  color: #f48024;
 }
 
 // Основной контент
