--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,11 +21,14 @@ header {
   background-color: #f48024;
   padding: 5px 0;
   height: 60px;
+  display: flex; // Добавьте это
+  align-items: center; // Добавьте это
+  justify-content: space-between; // Добавьте это
+  padding: 0 20px; // Добавьте это
 }
 
 .logo {
   display: inline-block;
-  margin-left: 20px;
 }
 
 .logo a {
@@ -36,8 +39,8 @@ header {
 }
 
 nav {
-  display: inline-block;
-  margin-left: 30px;
+  display: flex; // Добавьте это
+  align-items: center; // Добавьте это
 }
 
 nav ul {
@@ -62,9 +65,8 @@ nav ul li a:hover {
 }
 
 .download-resume {
-  display: inline-block;
-  float: right;
-  margin-right: 20px;
+  display: flex; // Добавьте это
+  align-items: center; // Добавьте это
 }
 
 .download-resume a {
