feat: implemented phrases fetching from the backend server

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,6 +95,7 @@ main {
     h2 {
       font-size: 24px;
       margin-bottom: 40px;
+      cursor: default;
     }
   }
 }
@@ -105,4 +106,5 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
+  cursor: default;
 }
